--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "google/apiclient": "^2.0"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.6.0",
-        "phpunit/phpunit": "~7.0"
+        "phpunit/phpunit": "4.*",
+        "mockery/mockery": "0.9.*"
     },
     "autoload": {
         "psr-4": {
