--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "google/apiclient": "^2.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "4.*",
+        "mockery/mockery": "0.9.*"
     },
     "autoload": {
         "psr-4": {
